Subiendo Componente Principales de Proyecto, Cargo y Departamento

--- a/gestionEmpleados-Intermedio/src/app/app.component.html
+++ b/gestionEmpleados-Intermedio/src/app/app.component.html
@@ -1,5 +1,7 @@
 
-<nav>
+
+
+<nav class="navbar justify-content-center">
   <div>
     <a routerLink="empleados">Empleados</a>
     <a routerLink=""></a>
