Agregando NavBar y Texto de Inicio en el Componente INICIO

--- a/gestionEmpleados-Intermedio/src/app/app.component.html
+++ b/gestionEmpleados-Intermedio/src/app/app.component.html
@@ -1,11 +1,4 @@
 
-
-
-<nav class="navbar justify-content-center">
-  <div>
-    <a routerLink="empleados">Empleados</a>
-    <a routerLink=""></a>
-  </div>
-</nav>
+<app-inicio></app-inicio>
 
 <router-outlet />
