--- a/gestionEmpleados-Intermedio/src/app/inicio/inicio.component.html
+++ b/gestionEmpleados-Intermedio/src/app/inicio/inicio.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <nav class="navbar justify-content-center">
-    <div class="d-flex flex-wrap justify-content-center">
+    <div class="d-flex flex-wrap ">
         <a class="m-1 btn btn-info" routerLink="empleados">Empleados</a>
         <a class="m-1 btn btn-info" routerLink="departamentos">Departamentos</a>
         <a class="m-1 btn btn-info" routerLink="proyectos">Proyectos</a>
